<resources>
    <string name="app_name">Safer</string>
    <string name="action_settings">Settings</string>
    <string name="login_button">Log In</string>
    <string name="creataccount_button">Create Account</string>
    <string name="password_hint">password</string>
    <string name="email_hint">e-mail</string>
    <string name="letsdoit">Let\'s do it</string>
    <string name="about">About</string>
    <string name="my_profile">My Profile</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
