<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.amrosman.safer.MainActivity"
    tools:showIn="@layout/activity_main">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/saferlogo" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollmain"
        android:layout_below="@+id/logo"
        android:layout_above="@+id/study_abroad">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/passwordtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/loginbutton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/login_button"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/createaccount"
                android:layout_width="132dp"
                android:layout_height="40dp"
                android:text="@string/creataccount_button"
                android:textAllCaps="false" />

            <ImageButton
                android:id="@+id/connect_fb"
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/connect_fb"
                android:onClick="Handlethisshit" />

            <TextView
                android:id="@+id/letsdoit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/letsdoit"
                android:textSize="20dp" />

        </LinearLayout>


    </ScrollView>

    <ImageView
        android:id="@+id/study_abroad"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"/>

</RelativeLayout>
